# scrapeaming

./: README.md  default.nix  run.sh  scrapeaming.cabal
debug/: probe.sh  scrape.sh
logo/: recipe.txt
scrapers/: bing.js  duckduckgo.js  google.js  head.js  sources.txt  video.js  yahoo.js
src/: Browser.hs  Cli.hs  Display.hs  Driver.hs  Environment.hs  Logger.hs  Main.hs  Probe.hs  Process.hs  Scraper.hs  Scrapers.hs  Server.hs  Task.hs  Temp.hs  Token.hs  Util.hs
static/: index.html  script.js  style.css
