name: scrapeaming
version: 0.1.0.0
synopsis: Search for videos on the web and sort them by length and quality.
homepage: https://github.com/timjrd/scrapeaming
license: AGPL-3
license-file: LICENSE
author: Timothée Jourde
maintainer: timjrd@netc.fr
category: Web
build-type: Simple
cabal-version: >=1.10

executable scrapeaming
  main-is: Main.hs
  ghc-options:
    -O2
    -threaded
    -W

  other-modules:
    Environment
    Task
    Temp
    Process
    Display
    Scraper
    Scrapers            
    Probe
    Token
    Logger
    Driver
    Cli
    Server
    Browser

  build-depends:
    base,
    filepath,
    process,
    stm,
    bytestring,
    containers,
    transformers,
    unix,
    
    async,
    temporary,
    entropy,
    network-uri,
    ansi-terminal,
    happstack-server,
    json

  hs-source-dirs: src
  default-language: Haskell2010
